IndexBacklog, EditBacklog edited for Sort methods, IndexSprint deleted

--- a/ScrumApplication.Web/Content/bootstrap-litera.css
+++ b/ScrumApplication.Web/Content/bootstrap-litera.css
@@ -2130,6 +2130,8 @@ pre {
         border: 0;
     }
 
+
+
 .form-control {
     display: block;
     width: 100%;
@@ -3364,6 +3366,24 @@ input[type="button"].btn-block {
 .dropleft {
     position: relative;
 }
+
+.dropdown-submenu {
+    position: relative;
+}
+
+    .dropdown-submenu a::after {
+        transform: rotate(-90deg);
+        position: absolute;
+        right: 6px;
+        top: .8em;
+    }
+
+    .dropdown-submenu .dropdown-menu {
+        top: 0;
+        left: 100%;
+        margin-left: .1rem;
+        margin-right: .1rem;
+    }
 
 .dropdown-toggle::after {
     display: inline-block;
