--- a/ScrumApplication.Web/Views/Project/CreateBacklog.cshtml
+++ b/ScrumApplication.Web/Views/Project/CreateBacklog.cshtml
@@ -105,6 +105,6 @@
 }
 
 <div>
-    <a href="@Url.Action("IndexBacklog", "Project", new { id = Model.Backlog.ProjectId },
+    <a href="@Url.Action("IndexBacklog", "Project", new { projectId = Model.Backlog.ProjectId },
                 Request.Url.Scheme)" style="margin-top:20px;" class="btn btn-primary">Back To List</a>
 </div>
