--- a/ScrumApplication.Web/Views/Project/Create.cshtml
+++ b/ScrumApplication.Web/Views/Project/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@model ScrumApplication.Entity.Models.Project
+﻿@using ScrumApplication.Entity.Models
+@using ScrumApplication.DAL.Repositories
+@model ProjectEditViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -6,46 +8,84 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Project</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+
+<div class="form-horizontal">
+    <h4>Project</h4>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="row">
+        <div class="col-md-6 col-sm-10">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Project.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Project.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Project.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Project.Description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Project.Description, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Project.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Project.EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Project.EndDate, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <span>Sprint Time(Day)</span>
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Project.DefaultSprintTime, new { htmlAttributes = new { @class = "form-control" }, placeholder = "Default sprint days" })
+                    @Html.ValidationMessageFor(model => model.Project.DefaultSprintTime, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DayCount, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DayCount, new { htmlAttributes = new { @class = "form-control" }, placeholder = "How long project take" })
-                @Html.ValidationMessageFor(model => model.DayCount, "", new { @class = "text-danger" })
+        <div class="col-md-6 col-sm-10">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Project.TeamId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(x => Model.Project.TeamId, new SelectList(Model.UserTeams, "TeamId", "Name"),
+                               htmlAttributes: new { @class = "form-control", id = "TeamId" })
+                    @Html.ValidationMessageFor(model => model.Project.TeamId, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
+            <div>   
+                <div class="col-md-6 col-sm-10">
+                    <div class="col-md-10" style="margin:auto;">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DefaultSprintTime, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DefaultSprintTime, new { htmlAttributes = new { @class = "form-control" } , placeholder = "Default sprint days" })
-                @Html.ValidationMessageFor(model => model.DefaultSprintTime, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                        <div style="margin-top:10px;">
+                            OR <a href="@Url.Action("Create", "Team", new { projectId = Model.Project.ProjectId , from = ViewEnum.ProjectCreate})" class="btn btn-success" style="margin-left: 20px;">Create Team</a>
+                        </div>
+                    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                </div>
             </div>
         </div>
     </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-primary" />
+        </div>
+    </div>
+</div>
 }
 
+@if (Model.Project.TeamId.HasValue)
+{
     <div>
-        <a href="@Url.Action("BackToList", "Project", new { id = Model.TeamId })" class="btn btn-default">Back To List</a>
+        <a href="@Url.Action("BackToList", "Project", new { id = Model.Project.TeamId })" class="btn btn-primary">Back To Projects</a>
     </div>
+}
+else
+{
+    <div>
+        <a href="@Url.Action("Index", "Home")" class="btn btn-primary">Back To Home</a>
+    </div>
+
+}
