--- a/ScrumApplication.Web/Views/Project/Edit.cshtml
+++ b/ScrumApplication.Web/Views/Project/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ScrumApplication.DAL.Repositories
-@model ScrumApplication.Entity.Models.ProjectEditViewModel
+@using ScrumApplication.Entity.Models
+@model ProjectEditViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -15,7 +16,7 @@
     <h4>Project</h4>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Project.ProjectId)
-    @Html.HiddenFor(model => model.Project.TeamId)
+    @Html.HiddenFor(model => model.AssignedTeam.TeamId)
     <div class="row">
         <div class="col-md-6 col-sm-10">
             <div class="form-group">
@@ -32,17 +33,15 @@
                     @Html.ValidationMessageFor(model => model.Project.Description, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group">
-                @Html.LabelFor(model => model.Project.DayCount, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Project.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Project.DayCount, new { htmlAttributes = new { @class = "form-control" }, placeholder = "How long project take" })
-                    @Html.ValidationMessageFor(model => model.Project.DayCount, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Project.EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Project.EndDate, "", new { @class = "text-danger" })
                 </div>
             </div>
-
             <div class="form-group">
-                Sprint Time(Day)
+                <span>Sprint Time(Day)</span>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Project.DefaultSprintTime, new { htmlAttributes = new { @class = "form-control" }, placeholder = "Default sprint days" })
                     @Html.ValidationMessageFor(model => model.Project.DefaultSprintTime, "", new { @class = "text-danger" })
@@ -50,31 +49,34 @@
             </div>
         </div>
         <div class="col-md-6 col-sm-10">
-            <div class="form-group">
-                <div class="col-md-10">Select Team</div>
-                <div class="col-md-10">
-                    @Html.DropDownListFor(x => Model.Project.TeamId, new SelectList(Model.UserTeams, "TeamId", "Name"),
-                               htmlAttributes: new { @class = "form-control", id = "BacklogStatus" })
-                    @Html.ValidationMessageFor(model => model.Project.TeamId, "", new { @class = "text-danger" })
+            @if (TeamRepository.IsProjectManager(Model.Project.ProjectId))
+            {
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Project.TeamId, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownListFor(x => Model.Project.TeamId, new SelectList(Model.UserTeams, "TeamId", "Name"),
+                                   htmlAttributes: new { @class = "form-control", id = "TeamId" })
+                        @Html.ValidationMessageFor(model => model.Project.TeamId, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
-            <div>
-                <div class="col-md-6 col-sm-10">
-                    <div class="col-md-10" style="margin:auto;">
-                        
-                        <div style="margin-top:10px;">
-                            OR <a href="@Url.Action("Create", "Team", new { projectId = Model.Project.ProjectId })" class="btn btn-success" style="margin-left: 20px;">Create Team</a>
+                <div>
+                    <div class="col-md-6 col-sm-10">
+                        <div class="col-md-10" style="margin:auto;">
+
+                            <div style="margin-top:10px;">
+                                OR <a href="@Url.Action("Create", "Team", new { projectId = Model.Project.ProjectId , from = ViewEnum.ProjectEdit})" class="btn btn-success" style="margin-left: 20px;">Create Team</a>
+                            </div>
                         </div>
                     </div>
-                    
                 </div>
-            </div>
+            }
+            
         </div>
     </div>
 
-    
 
-   
+
+
 
     @if (TeamRepository.IsProjectManager(Model.Project.ProjectId))
     {
