--- a/ScrumApplication.Web/Views/Project/Edit.cshtml
+++ b/ScrumApplication.Web/Views/Project/Edit.cshtml
@@ -99,5 +99,5 @@
 }
 
     <div>
-        <a href="@Url.Action("BackToList", "Project", new { id = Model.Project.TeamId })" class="btn btn-primary">Back To List</a>
+        <a href="@Url.Action("ProjectHome", "Project", new { id = Model.Project.ProjectId })" class="btn btn-primary">Back To List</a>
     </div>
