--- a/ScrumApplication.Web/Views/Shared/_Layout.cshtml
+++ b/ScrumApplication.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @*<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>*@
     @*<script src="https://getbootstrap.com/docs/4.0/assets/js/vendor/popper.min.js"></script>*@
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/solid.css" integrity="sha384-wnAC7ln+XN0UKdcPvJvtqIH3jOjs9pnKnq9qX68ImXvOGz2JuFoEiCjT8jyZQX2z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/fontawesome.css" integrity="sha384-HbmWTHay9psM8qyzEKPc8odH4DsOuzdejtnr+OFtDmOcIVnhgReQ4GZBH7uwcjf6" crossorigin="anonymous">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -25,37 +27,52 @@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index","Team")">Teams</a>
                 </li>
+                @if (UserRepository.IsUserSigned())
+                {
+                    <a class="nav-link" href="@Url.Action("Account","User")">Account</a>
+                    <a class="nav-link" href="@Url.Action("Logout","User")">Sign Out</a>
+                    @*<li class="nav-item">@Html.ActionLink("Sign Out", "Logout", "User")</li   >*@
+                }
+                else
+                {
+                    <a class="nav-link" href="@Url.Action("Register","User")">Register</a>
+                    @*<li class="nav-item">@Html.ActionLink("Register", "Register", "User")</li>*@
+                    <span class="nav-link"> | </span>
+                    <a class="nav-link" href="@Url.Action("Login","User")">Sign In</a>
+                    @*<li class="nav-item">@Html.ActionLink("Sign In", "Login", "User")</li>*@
+                }
             </ul>
         </div>
     </nav>
+    
     @*<div class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("SimpleSCRUM", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("SimpleSCRUM", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Teams", "Teams", "Home")</li>
+                        @if (UserRepository.IsUserSigned())
+                            {
+                                <li>@Html.ActionLink("Sign Out", "Logout", "User")</li>
+                            }
+                            else
+                            {
+                                <li>@Html.ActionLink("Register", "Register", "User")</li>
+                                <span> | </span>
+                                <li>@Html.ActionLink("Sign In", "Login", "User")</li>
+                            }
+                    </ul>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Teams", "Teams", "Home")</li>
-                    @if (UserRepository.IsUserSigned())
-                        {
-                            <li>@Html.ActionLink("Sign Out", "Logout", "User")</li>
-                        }
-                        else
-                        {
-                            <li>@Html.ActionLink("Register", "Register", "User")</li>
-                            <span> | </span>
-                            <li>@Html.ActionLink("Sign In", "Login", "User")</li>
-                        }
-                </ul>
-            </div>
-        </div>
-    </div>*@
+        </div>*@
     <div class="container body-content">
         @RenderBody()
         <hr />
